# Mage

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.txt  README.pod  Ritualfile
cmake/: MageTest.cmake
docs/: CMakeLists.txt  mana_glob.manadoc  mana_macros.manadoc  mana_macros.pod  mana_regex.manadoc  mana_regex.pod
lib/ManaVM/: CMakeLists.txt
lib/ManaVM/src/mana/: _macros.hxx  db.cxx  db.hxx  regex.cxx  regex.hxx  source_scanner.cxx  source_scanner.hxx  value.cxx  value.hxx
lib/ManaVM/src/mana/_aux/: deleter.hxx
lib/ManaVM/src/mana/value/: bool_value.cxx  bool_value.hxx  int_value.cxx  int_value.hxx  sym_value.cxx  sym_value.hxx
lib/ManaVM/src/mana/visitors/: basic_visitor.cxx  basic_visitor.hxx  equality_visitor.cxx  equality_visitor.hxx
lib/PCRE2/: CMakeLists.txt
lib/SQLite/: CMakeLists.txt  config.h.in
src/: main.cxx
test/: CMakeLists.txt
test/ManaVM/: regex_capture_full_iterator.cxx  regex_capture_holey_iterator.cxx  regex_capture_idx.cxx  regex_capture_name.cxx  regex_correct.cxx  regex_incorrect.cxx  regex_match.cxx  source_glob_errors_on_empty_classes.cxx  source_glob_finds_globbing_on_complexish_suffixes.cxx  source_glob_finds_globbing_on_stem.cxx  source_glob_finds_globbing_on_suffixes.cxx  source_glob_globs_directory_depth_correctly.cxx  source_glob_properly_dissects_absolute_glob.cxx  source_glob_properly_dissects_relative_glob.cxx  source_glob_star_autoescape_happens_as_docs_say.cxx  source_scanner_remembers_target_source_glob.cxx  value_create_bool.cxx  value_create_int.cxx  value_create_sym.cxx  value_eq_bool.cxx  value_eq_int.cxx  value_eq_sym.cxx  value_universal_equality.cxx
